fix overflow issues in the nav bar

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ nav[role="navigation"] {
   top: 34px;
   display: block;
   overflow: hidden;
-  width: 240px;
+  width: 200px;
 }
 
 nav[role="navigation"] .main-navigation {
